--- a/sass/board.jquery.sass
+++ b/sass/board.jquery.sass
@@ -12,6 +12,8 @@ ul.board-wrapper
       background-color: #cccccc
       padding: 0.5em
     ul
+      &.rows-wrapper
+        min-height: 250px
       margin: 0
       padding: 0
       li.board-row
