--- a/sass/board.jquery.sass
+++ b/sass/board.jquery.sass
@@ -3,6 +3,16 @@ ul.board-wrapper
   margin: 0
   padding: 0
   width: 100%
+  .editable
+    cursor: pointer
+    &:hover
+      text-decoration: underline
+  span.ok, span.cancel
+    cursor: pointer
+    background-color: #DDDDDD
+    padding: 0.4em 0.2em
+    margin: 0 0 0 0.4em
+    font-size: 0.7em
   li
     list-style-type: none
     &.board-column
