center columns titles

--- a/sass/board.jquery.sass
+++ b/sass/board.jquery.sass
@@ -29,6 +29,7 @@ ul.board-wrapper
       background-color: $darkGray
       color: $s-lightGray
       font-weight: bold
+      text-align: center
       span
         color: $darkGray
     ul
