--- a/sass/board.jquery.sass
+++ b/sass/board.jquery.sass
@@ -1,7 +1,12 @@
+@import "sassy-buttons"
+
 $darkGray: #444444
 $lightGray: #DDDDDD
 $x-lightGray: #FAFAFA
 $s-lightGray: #CCCCCC
+
+//  sassy-buttons variables
+$sb-gradient-style:  "flat"
 
 ul.board-wrapper
   display: table
@@ -15,10 +20,11 @@ ul.board-wrapper
       text-decoration: underline
   span.ok, span.cancel
     cursor: pointer
-    background-color: $lightGray
-    padding: 0.4em 0.2em
-    margin: 0 0 0 0.4em
-    font-size: 0.7em
+    @include sassy-button("flat", 0.2em, 0.7em, green, green)
+    @include sassy-button-structure(0.2em, 0.7em, 0.5em)
+    margin: 0.2em
+  span.cancel
+    @include sassy-button-gradient($sb-gradient-style, red, red)
   li
     list-style-type: none
     &.board-column
@@ -31,11 +37,10 @@ ul.board-wrapper
       color: $s-lightGray
       font-weight: bold
       text-align: center
-      span
-        color: $darkGray
     ul
       &.rows-wrapper
         min-height: 250px
+
       margin: 0
       padding: 0
       li.board-row
@@ -43,3 +48,9 @@ ul.board-wrapper
         margin: 0.2em
         background-color: $x-lightGray
         border: 0.1em solid $lightGray
+
+.sortable-placeholder
+  background-color: #AFFA93
+  height: 35px
+  border: 0.2em dashed darken(#AFFA93, 20%)
+  margin: 0.2em
