close #14 : Delete a line

--- a/sass/board.jquery.sass
+++ b/sass/board.jquery.sass
@@ -18,6 +18,7 @@ ul.board-wrapper
     @include sassy-button-structure(0.2em, 0.7em, 0.5em)
     float: right
     font-weight: bold
+
   .editable
     cursor: pointer
     color: $darkGray
@@ -55,6 +56,11 @@ ul.board-wrapper
         margin: 0.2em
         background-color: $x-lightGray
         border: 0.1em solid $lightGray
+        span.remove-row
+          @include sassy-button("flat", 0.2em, 0.7em, red, red)
+          @include sassy-button-structure(0.2em, 0.7em, 0.3em)
+          float: right
+          font-weight: bold
 
 .sortable-placeholder
   background-color: #AFFA93
